Creada la funcion de filtrado y los objetos

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head lang="es">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Viva la Comida</title>
+    <title>yumyum</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/materialize.min.css">
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper orange accent-4">
+      <div class="nav-wrapper pink darken-1">
         <a href="#" class="brand-logo center">
-          ¡Viva la comida!
+          yumyum.mx
           <i class="material-icons">cake</i>
         </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -30,7 +30,7 @@
 
     <section class="container">
       <div class="nav-wrapper row">
-        <form class="col m6 s12 offset-m3">
+        <form id="search-form" class="col m6 s12 offset-m3">
           <div class="input-field">
             <input id="search" type="search" required>
             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -40,7 +40,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container contenedor-restaurantes">
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
