Cambiado la funcion de localizar de js a jquery

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="container">
       <div class="row">
-        <div id="mapa" class="col m6 s12 offset-m3"> </div>
+        <div class="col m6 s12 offset-m3 mapa"> </div>
       </div>
     </section>
 
@@ -115,7 +115,7 @@
     </section>
 
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyYqB_J81Vv4y9O2M4x5xzWqTsOArXjbM &callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyYqB_J81Vv4y9O2M4x5xzWqTsOArXjbM &callback=obtenerUbicacion"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/materialize.min.js"></script>
