Agregas imagenes de los restaurantes

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="http://via.placeholder.com/200x200" alt="Contact" class="circle responsive-img">
+            <div class="col s3">
+              <img src="assets/img/pizza.jpg" alt="Contact" class="fotoRestaurante responsive-img">
             </div>
             <div class="col s8 color-gray">
               <h4>Pizza del Perro Negro</h4>
@@ -58,8 +58,8 @@
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="http://via.placeholder.com/200x200" alt="Contact" class="circle responsive-img">
+            <div class="col s3">
+              <img src="assets/img/papa.jpg" alt="Contact" class="fotoRestaurante responsive-img">
             </div>
             <div class="col s8 color-gray">
               <h4>Papa Guapa</h4>
@@ -72,8 +72,8 @@
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="http://via.placeholder.com/200x200" alt="Contact" class="circle responsive-img">
+            <div class="col s3">
+              <img src="assets/img/barracuda.jpg" alt="Contact" class="fotoRestaurante responsive-img">
             </div>
             <div class="col s8 color-gray">
               <h4>Barracuda Dinner</h4>
@@ -86,8 +86,8 @@
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="http://via.placeholder.com/200x200" alt="Contact" class="circle responsive-img">
+            <div class="col s3">
+              <img src="assets/img/moshi.jpg" alt="Contact" class="fotoRestaurante responsive-img">
             </div>
             <div class="col s8 color-gray">
               <h4>Moshi Moshi</h4>
@@ -100,8 +100,8 @@
       <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
-            <div class="col s2">
-              <img src="http://via.placeholder.com/200x200" alt="Contact" class="circle responsive-img">
+            <div class="col s3">
+              <img src="assets/img/churros.jpg" alt="Contact" class="fotoRestaurante responsive-img">
             </div>
             <div class="col s8 color-gray">
               <h4>Churrería El Moro</h4>
