--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <section class="container">
       <div class="nav-wrapper row">
-        <form id="search-form" class="col m6 s12 offset-m3">
+        <form id="formulario-busqueda" class="col m6 s12 offset-m3">
           <div class="input-field">
-            <input id="search" type="search" required>
+            <input id="buscar" type="search" required>
             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
             <i class="material-icons">close</i>
           </div>
@@ -41,7 +41,7 @@
     </section>
 
     <section class="container contenedor-restaurantes">
-      <article class="row">
+      <!-- <article class="row">
         <div class="card-panel indigo lighten-5 z-depth-1 col m8 s12 offset-m2">
           <div class="row valign-wrapper">
             <div class="col s3">
@@ -110,12 +110,12 @@
             </div>
           </div>
         </div>
-      </article>
+      </article> -->
 
     </section>
 
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyYqB_J81Vv4y9O2M4x5xzWqTsOArXjbM &callback=obtenerUbicacion"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyYqB_J81Vv4y9O2M4x5xzWqTsOArXjbM&callback=obtenerUbicacion"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/materialize.min.js"></script>
