Ajustando imagenes y agregando favicon y logo

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/materialize.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/yumyum.png">
   </head>
   <body>
     <nav>
       <div class="nav-wrapper pink darken-1">
         <a href="#" class="brand-logo center">
+          <img src="assets/img/yum.png" alt="logo">
           yumyum.mx
-          <i class="material-icons">cake</i>
         </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#"><i class="material-icons">info</i></a></li>
@@ -22,7 +23,7 @@
       </div>
     </nav>
 
-    <section class="container">
+    <section class="container" id="mapa">
       <div class="row">
         <div class="col m6 s12 offset-m3 mapa"> </div>
       </div>
